# robotics_short_course

./: README.md
myrobot_description/: CMakeLists.txt  package.xml
myrobot_description/launch/: myrobot_rviz.launch
myrobot_description/urdf/: myrobot.gazebo  myrobot.xacro  myrobot.xml
rrbot_description/launch/: rrbot.rviz  rrbot_rviz.launch
