<?xml version="1.0"?>
<package>
  <name>myrobot_description</name>
  <version>0.0.0</version>
  <description>The myrobot_description package</description>
    
  <maintainer email="sanda@mail.com">Sanda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
